--- a/style/style.css
+++ b/style/style.css
@@ -1,21 +1,24 @@
 * {
     padding: 0;
     margin: 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: whitesmoke;
 }
 
-body {
-    height: 100vh;
-    width: 100vw;
+
+body,
+html {
+    height: 100%;
+    width: 100%;
     background-color: #1b1a1a;
 }
 
+
 .main-container {
-    height: 100;
+    height: 100vh;
     width: 100vw;
     position: relative;
     overflow: hidden;
-
 }
 
 .header-container {
@@ -24,17 +27,16 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    font-size: 1.5em
+    font-size: 1.3em;
 }
 
 .header-container span {
-    letter-spacing: 4px;
-    margin-left: 20px;
-    text-transform: capitalize;
+    margin-left: 4vw;
+    text-transform: uppercase;
 }
 
-.btn-main {
-    background-color: #15abf0;
+#export-btn {
+   background-color: #15abf0;
     height: 40px;
     width: 180px;
     margin-right: 40px;
@@ -46,23 +48,20 @@ body {
     border-radius: 9px;
 }
 
-.btn-main i {
-    color: black;
-    margin-left: 8px;
-}
-
 .btn-main:hover {
-    background-color: lab(41.29% 53.34 -84.41);
+    background-color: #0460bd;
 }
 
-.middle-container {
+.display-container {
     height: 85vh;
     width: 100vw;
     display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.img-uploder-container {
-    height: 85vh;
+.left-img-container {
+    height: 100%;
     width: 70vw;
     display: flex;
     align-items: center;
@@ -70,44 +69,72 @@ body {
     background-color: #2c2b2b;
 }
 
-.img-uploder-container label {
-    cursor: pointer;
-    color: gray;
+
+.right-filter-contaner {
+    height: 100%;
+    width: 30vw;
 }
 
-.img-uploder-container i {
-    color: gray;
+.footer-container {
+    height: 8vh;
+    width: 86vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 4vw;
 }
+
+.setting-container {
+    display: flex;
+    gap: 14px;
+}
+
+.setting-container div {
+    height: 40px;
+    width: 40px;
+    background-color: black;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+
+.footer-container div i {
+    color: #097bec;
+}
+
+
 
 #main-img {
     display: none;
 }
 
-.img-uploder {
+.image-uploader {
     height: 30%;
-    width: 60%;
+    width: 70%;
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 5px white dotted;
+    flex-direction: column;
+    border: dotted white 4px;
     border-radius: 24px;
-    font-size: 3em;
-    letter-spacing: 2px;
-    text-transform: capitalize;
-
 }
+
+.image-uploader label {
+    font-size: 2em;
+    letter-spacing: 4px;
+    text-transform: capitalize;
+    color: gray;
+}
+
+.image-uploader label i {
+    color: gray;
+}
+
 
 .filter-container {
-    height: 85vh;
-    width: 30vw;
-}
-
-.filters-section {
-    height: 100%;
-    width: 100%;
-}
-
-.filters {
     height: 100%;
     width: 100%;
     display: flex;
@@ -118,78 +145,36 @@ body {
     overflow-y: scroll;
 }
 
-.filters div {
+.filter-container div {
     height: 150px;
-    width: 170px;
+    width: 150px;
+    margin: 5px;
     background-color: #2c2b2b;
-    margin: 4px;
-}
-
-.footer-container {
-    height: 8vh;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.footer-container div {
-    font-size: 1.4em;
-}
-
-.edit-item-1 {
-    height: 45px;
-    width: 45px;
-    background-color: #ff0000cc;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    overflow: hidden;
+    border-radius: 14px;
     cursor: pointer;
+    box-shadow: 2px 1px 2px #101010;
 }
 
-.edit-item {
-    display: flex;
-    gap: 20px;
+.filter-container div img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
 
-.edit-item-2 {
-    height: 45px;
-    width: 45px;
-    border-radius: 50%;
-    background-color: #15abf0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-right: 8px;
-    cursor: pointer;
-}
 
-.save {
-    height: 40px;
-    width: 80px;
-    background-color: #15abf0;
-    margin-left: 8px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    border-radius: 10px;
-}
-
-#edit-img {
+#img-container {
     display: none;
-    height: 80%;
-    width: 80%;
-    background-color: red;
+    height: 70%;
+    width: 90%;
 }
 
-#edit-img img {
+#img-container img {
     height: 100%;
     width: 100%;
 }
 
-.setting {
+.settings {
     height: 100%;
     width: 100%;
     position: absolute;
@@ -200,15 +185,15 @@ body {
 }
 
 .setting-pannel {
-    height: 60vh;
-    width: 300px;
-    background-color: rgba(68, 67, 67, 0.993);
-    transform: translate(42vw, 15vh);
-    background: rgba(68, 67, 67, 0.81);
+    height: 70vh;
+    width: 350px;
+    transform: translate(40vw, 10vh);
+    background: rgba(18, 18, 18, 0.81);
     box-shadow: 0 8px 32px 0 rgba(223, 224, 247, 0.044);
     backdrop-filter: blur(2px);
     border-radius: 14px;
     padding: 20px;
+
 }
 
 
@@ -221,7 +206,7 @@ body {
 
 .setting-pannel div label{
     text-transform:capitalize;
-    color: #d8d3d3;
+    color: #a8a6a6;
     font-size: 1.2em;
 }
 
@@ -233,7 +218,165 @@ body {
     font-size: 2em;
     text-transform: uppercase;
     font-weight: 800;
+}
+
+#loader{
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #1b1a1a;
+
+}
+
+
+.overlay{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: linear-gradient(to bottom,#1b1a1a,transparent,#1b1a1a,#1b1a1a);
+}
+
+.loader-img-container img{
+    height: 100%;
+    width: 100%;
+    filter:saturate(0.9);
+    object-fit: cover;
+}
+
+.main-loader{
+    height:20px; 
+    width: 330px;
+    background-color: #2c2b2b;
+    margin: auto;  
+    margin-top: 50px;
+    border-radius: 14px;
+    overflow: hidden;
+    position: relative;
+}
+
+.loder{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width:0%;
+    background-color: #097bec;
+    animation: loader 5s linear infinite;
+}
+
+.loader-img-container{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.loader-text-container{
+    position:absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, 1%);
+    text-align: center;
+}
+
+.loader-text-container h3{
+    text-align: center;
+    margin-top: 20px;
+    color: #a8a6a6;
+    font-size: 1.2em;
+}
+
+@keyframes loader {
+    0%{
+        width: 1%;
+    }
+    10%{
+        width: 10%;
+    }
+    20%{
+        width: 20%;
+    }
+    30%{
+        width: 30%;
+    }
+    40%{
+        width: 40%;
+    }
+    50%{
+        width: 50%;
+    }
+    60%{
+        width: 60%;
+    }
+    70%{
+        width: 70%;
+    }
+    80%{
+        width: 80%;
+    }
+    90%{
+        width: 90%;
+        }
+    100%{
+        width: 100%;
+    }
+}
+
+
+#notificationBar{
+    position: absolute;
+    height: 50px;
+    width: 320px;
+     background: rgba(18, 18, 18, 0.81);
+    box-shadow: 0 8px 32px 0 rgba(223, 224, 247, 0.044);
+    backdrop-filter: blur(2px);
+    bottom: 10%;
+    border-radius: 14px;
+    border-right: 10px solid blue;
     display: flex;
+    justify-content: end;
+    align-items: center;
+    padding: 2px;
+    left:-100%;
+    transition: all 1s ease-in-out;
+}
+
+#notificationBar h3{
+    font-size: 1.3em;
+    color: #ffffffbb;
+}
+
+#random-img-container{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
+    backdrop-filter: blur(2px);
+    background: rgba(18, 18, 18, 0.81);
+    align-items: center;
     justify-content: center;
-    letter-spacing: 2px;
+    flex-wrap: wrap;
+    overflow-x: hidden;
+    overflow-y:scroll;
+    gap:14px;
+
+}
+
+.random-img-div{
+    height: 150px;
+    width: 200px;
+    overflow: hidden;
+}
+
+.random-img-div img{
+    height: 100%;
+    width: 100%;
+    object-fit:fill;
 }
